# pointnet

./: .gitignore  README.md  pyproject.toml
.trunk/: trunk.yaml
.trunk/hooks/: notebook_format.sh
scripts/: classification_train.py  mnist_train.py  model_net_40_train.py
scripts/notebooks/: mnist_3d_dataset.ipynb  model_net_40_dataset.ipynb  t_net_investigation.ipynb
src/pointnet/data/: __init__.py  mnist_3d_dataset.py  model_net_40_dataset.py  random_rotation_transform.py
src/pointnet/model/: __init__.py  base_point_net.py  classification_point_net.py  segmentation_point_net.py  transform_net.py
src/pointnet/structs/: __init__.py  split.py  training_config.py
src/pointnet/utils/: meta_logger.py
tests/data/: test_mnist_3d_dataset.py  test_model_net_40_dataset.py  test_random_rotation_transform.py
tests/model/: test_base_point_net.py  test_classification_point_net.py  test_segmentation_point_net.py  test_transform_net.py
