[project]
name = "pointnet"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Kyle Newman", email = "kyle@thenewmans.com.au" }]
dependencies = [
  "notebook>=7.4.5",
  "torch>=2.7.1",
  "torchvision>=0.22.1",
  "matplotlib>=3.10.6",
  "pydantic>=2.11.9",
  "tqdm>=4.67.1",
  "scipy>=1.16.2",
  "trimesh>=4.8.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "None" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = ["pytest>=8.4.2", "ipympl>=0.9.7", "kagglehub>=0.3.13"]
